refactor: corregir modulo usuarios - bugs, hardcodes y logica fuera de lugar
Backend:
- User.java: getTenant() devuelve Tenant, agregar getTenantId(), LAZY fetch, isLocked(), hasRole()
- UserRepository: agregar findByActiveTrue(), countByActiveTrue(), findByFullNameContainingIgnoreCase()
- UserService: usar queries reales del repo en vez de cargar todo en memoria y filtrar
- UserController: tenant del usuario logueado (no hardcode 1L), proteger superadmin por rol (no por ID),
  usar excepciones custom, quitar @CrossOrigin duplicado, color de rol por prioridad
- AuthService: verificar cuenta bloqueada antes de login, usar Logger
- AuthController: quitar System.out, no exponer detalles de error, quitar endpoint validate inutil
- UserPrincipal: isAccountNonLocked() verifica lockedUntil correctamente
- UserResponse: agregar avatarUrl, timezone, locale
- RoleDisplayDto: agregar campo id (fix edicion de usuarios)
- PosApplication: quitar endpoints de test

Frontend:
- Login.jsx: quitar credenciales demo hardcodeadas
- MainMenu.jsx: usar menuTree del contexto en vez de re-fetch, usar logout del contexto