@@ -1,6 +1,8 @@
 package com.pos.user.controller;
 
 import com.pos.user.model.User;
+import com.pos.user.exception.DuplicateUserException;
+import com.pos.user.exception.UserNotFoundException;
 import com.pos.role.model.Role;
 import com.pos.user.service.UserService;
 import com.pos.user.dto.UserResponse;
@@ -8,9 +10,12 @@ import com.pos.user.dto.CreateUserRequest;
 import com.pos.user.dto.UpdateUserRequest;
 import com.pos.role.repository.RoleRepository;
 import com.pos.shared.auth.dto.RoleDisplayDto;
+import com.pos.shared.security.UserPrincipal;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.web.bind.annotation.*;
 import jakarta.validation.Valid;
@@ -18,9 +23,8 @@ import jakarta.validation.Valid;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/users")
@@ -38,37 +42,14 @@ public class UserController {
         this.passwordEncoder = passwordEncoder;
     }
 
-    private RoleDisplayDto convertRoleToDisplayDto(Role role) {
-        String displayName = role.getDescription() != null && !role.getDescription().trim().isEmpty()
-            ? role.getDescription()
-            : role.getName();
+    // --- Helper methods ---
 
-        String color = getRoleColor(role.getName());
-
-        return new RoleDisplayDto(
-            role.getName(),
-            displayName,
-            role.getDescription() != null ? role.getDescription() : "Sin descripción",
-            color,
-            role.getPriorityLevel()
-        );
-    }
-
-    private String getRoleColor(String roleName) {
-        if ("SUPER_ADMIN".equals(roleName)) return "error";
-        if ("ADMIN".equals(roleName)) return "warning";
-        if ("USER".equals(roleName)) return "info";
-
-        Optional<Role> roleOpt = roleRepository.findByName(roleName);
-        if (roleOpt.isPresent()) {
-            Integer priority = roleOpt.get().getPriorityLevel();
-            if (priority != null) {
-                if (priority >= 900) return "error";
-                if (priority >= 500) return "warning";
-                if (priority > 0) return "info";
-            }
+    private UserPrincipal getCurrentUser() {
+        Authentication auth = SecurityContextHolder.getContext().getAuthentication();
+        if (auth != null && auth.getPrincipal() instanceof UserPrincipal) {
+            return (UserPrincipal) auth.getPrincipal();
         }
-        return "default";
+        throw new IllegalStateException("User not authenticated");
     }
 
     private UserResponse convertToDto(User user) {
@@ -81,6 +62,9 @@ public class UserController {
         dto.setActive(user.getActive());
         dto.setCreatedAt(user.getCreatedAt());
         dto.setLastLogin(user.getLastLogin());
+        dto.setAvatarUrl(user.getAvatarUrl());
+        dto.setTimezone(user.getTimezone());
+        dto.setLocale(user.getLocale());
 
         List<RoleDisplayDto> rolesDisplay = user.getRoles().stream()
             .map(this::convertRoleToDisplayDto)
@@ -90,111 +74,114 @@ public class UserController {
         return dto;
     }
 
-    private Long getCurrentUserId() {
-        org.springframework.security.core.Authentication auth =
-            org.springframework.security.core.context.SecurityContextHolder.getContext().getAuthentication();
+    private RoleDisplayDto convertRoleToDisplayDto(Role role) {
+        String displayName = role.getDescription() != null && !role.getDescription().trim().isEmpty()
+            ? role.getDescription()
+            : role.getName();
 
-        if (auth != null && auth.getPrincipal() instanceof com.pos.shared.security.UserPrincipal) {
-            return ((com.pos.shared.security.UserPrincipal) auth.getPrincipal()).getId();
-        }
+        String color = getRoleColor(role);
 
-        throw new IllegalStateException("User not authenticated");
+        return new RoleDisplayDto(
+            role.getId(),
+            role.getName(),
+            displayName,
+            role.getDescription() != null ? role.getDescription() : "Sin descripción",
+            color,
+            role.getPriorityLevel()
+        );
     }
+
+    private String getRoleColor(Role role) {
+        Integer priority = role.getPriorityLevel();
+        if (priority == null) return "default";
+        if (priority >= 900) return "error";
+        if (priority >= 500) return "warning";
+        if (priority > 0) return "info";
+        return "default";
+    }
+
+    private Set<Role> resolveRoles(List<Integer> roleIds) {
+        if (roleIds == null || roleIds.isEmpty()) return Set.of();
+        return roleIds.stream()
+                .map(id -> roleRepository.findById(id.longValue()).orElse(null))
+                .filter(r -> r != null)
+                .collect(Collectors.toSet());
+    }
+
+    private boolean isSuperAdmin(User user) {
+        return user.hasRole("SUPER_ADMIN");
+    }
+
+    // --- Endpoints ---
 
     @GetMapping
     @PreAuthorize("hasAuthority('SUPER_ADMIN')")
     public ResponseEntity<List<UserResponse>> getAllUsers() {
-        List<User> users = userService.findAll();
-        List<UserResponse> dtos = users.stream()
-            .map(this::convertToDto)
-            .collect(Collectors.toList());
-        return ResponseEntity.ok(dtos);
+        return ResponseEntity.ok(
+            userService.findAll().stream().map(this::convertToDto).toList()
+        );
     }
 
     @GetMapping("/active")
     public ResponseEntity<List<UserResponse>> getActiveUsers() {
-        List<User> activeUsers = userService.findAllByActiveTrue();
-        List<UserResponse> dtos = activeUsers.stream()
-            .map(this::convertToDto)
-            .collect(Collectors.toList());
-        return ResponseEntity.ok(dtos);
+        return ResponseEntity.ok(
+            userService.findByActiveTrue().stream().map(this::convertToDto).toList()
+        );
     }
 
     @GetMapping("/search")
     public ResponseEntity<List<UserResponse>> searchUsers(@RequestParam(required = false) String name) {
-        List<User> users;
-        if (name != null && !name.trim().isEmpty()) {
-            users = userService.findByNameContainingIgnoreCase(name);
-        } else {
-            users = userService.findAll();
-        }
-        List<UserResponse> dtos = users.stream()
-            .map(this::convertToDto)
-            .collect(Collectors.toList());
-        return ResponseEntity.ok(dtos);
+        List<User> users = (name != null && !name.trim().isEmpty())
+            ? userService.findByNameContaining(name)
+            : userService.findAll();
+        return ResponseEntity.ok(users.stream().map(this::convertToDto).toList());
     }
 
     @GetMapping("/stats")
     public ResponseEntity<Map<String, Object>> getStatistics() {
-        long totalUsers = userService.findAll().size();
-        long activeUsers = userService.countByActiveTrue();
-        long inactiveUsers = totalUsers - activeUsers;
+        long total = userService.count();
+        long active = userService.countByActiveTrue();
 
-        Map<String, Object> stats = new HashMap<>();
-        stats.put("total", totalUsers);
-        stats.put("activos", activeUsers);
-        stats.put("inactivos", inactiveUsers);
-
-        return ResponseEntity.ok(stats);
+        return ResponseEntity.ok(Map.of(
+            "total", total,
+            "activos", active,
+            "inactivos", total - active
+        ));
     }
 
     @GetMapping("/role/{roleName}")
     public ResponseEntity<List<UserResponse>> getUsersByRole(@PathVariable String roleName) {
-        List<User> users = userService.findAllByRole(roleName);
-        List<UserResponse> dtos = users.stream()
-            .map(this::convertToDto)
-            .collect(Collectors.toList());
-        return ResponseEntity.ok(dtos);
+        return ResponseEntity.ok(
+            userService.findAllByRole(roleName).stream().map(this::convertToDto).toList()
+        );
     }
 
     @GetMapping("/check-username/{username}")
     public ResponseEntity<Map<String, Boolean>> checkUsername(@PathVariable String username) {
-        boolean exists = userService.existsByUsername(username);
-        Map<String, Boolean> response = new HashMap<>();
-        response.put("existe", exists);
-        return ResponseEntity.ok(response);
+        return ResponseEntity.ok(Map.of("existe", userService.existsByUsername(username)));
     }
 
     @GetMapping("/check-email/{email}")
     public ResponseEntity<Map<String, Boolean>> checkEmail(@PathVariable String email) {
-        boolean exists = userService.existsByEmail(email);
-        Map<String, Boolean> response = new HashMap<>();
-        response.put("existe", exists);
-        return ResponseEntity.ok(response);
+        return ResponseEntity.ok(Map.of("existe", userService.existsByEmail(email)));
     }
 
     @GetMapping("/{id}")
-    public ResponseEntity<?> getUserById(@PathVariable Long id) {
-        Optional<User> userOpt = userService.findById(id);
-        if (userOpt.isEmpty()) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                    .body(Map.of("error", "Usuario no encontrado"));
-        }
-        UserResponse dto = convertToDto(userOpt.get());
-        return ResponseEntity.ok(dto);
+    public ResponseEntity<UserResponse> getUserById(@PathVariable Long id) {
+        User user = userService.findByIdOrThrow(id);
+        return ResponseEntity.ok(convertToDto(user));
     }
 
     @PostMapping
-    public ResponseEntity<?> createUser(@Valid @RequestBody CreateUserRequest request) {
+    public ResponseEntity<UserResponse> createUser(@Valid @RequestBody CreateUserRequest request) {
         if (userService.existsByUsername(request.getUsername())) {
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                    .body(Map.of("error", "El nombre de usuario ya existe"));
+            throw new DuplicateUserException("username", request.getUsername());
+        }
+        if (userService.existsByEmail(request.getEmail())) {
+            throw new DuplicateUserException("email", request.getEmail());
         }
 
-        if (userService.existsByEmail(request.getEmail())) {
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                    .body(Map.of("error", "El email ya está registrado"));
-        }
+        UserPrincipal currentUser = getCurrentUser();
 
         User newUser = new User();
         newUser.setUsername(request.getUsername());
@@ -203,37 +190,24 @@ public class UserController {
         newUser.setPhone(request.getPhone());
         newUser.setActive(request.isActive());
         newUser.setPasswordHash(passwordEncoder.encode(request.getPassword()));
-        newUser.setTenant(1L);
+        newUser.setTenantId(currentUser.getTenantId());
         newUser.setAvatarUrl(request.getAvatarUrl());
         newUser.setTimezone(request.getTimezone());
         newUser.setLocale(request.getLocale());
-
-        if (request.getRoleIds() != null && !request.getRoleIds().isEmpty()) {
-            Set<Role> roles = request.getRoleIds().stream()
-                    .map(roleId -> roleRepository.findById(roleId.longValue()).orElse(null))
-                    .filter(r -> r != null)
-                    .collect(Collectors.toSet());
-            newUser.setRoles(roles);
-        }
+        newUser.setRoles(resolveRoles(request.getRoleIds()));
 
         User saved = userService.save(newUser);
         return ResponseEntity.status(HttpStatus.CREATED).body(convertToDto(saved));
     }
 
     @PutMapping("/{id}")
-    public ResponseEntity<?> updateUser(@PathVariable Long id, @Valid @RequestBody UpdateUserRequest request) {
-        Optional<User> userOpt = userService.findById(id);
-        if (userOpt.isEmpty()) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                    .body(Map.of("error", "Usuario no encontrado"));
-        }
-
-        User user = userOpt.get();
+    public ResponseEntity<UserResponse> updateUser(@PathVariable Long id,
+                                                    @Valid @RequestBody UpdateUserRequest request) {
+        User user = userService.findByIdOrThrow(id);
 
         if (request.getEmail() != null && !request.getEmail().equals(user.getEmail())) {
             if (userService.existsByEmailAndIdNot(request.getEmail(), id)) {
-                return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                        .body(Map.of("error", "El email ya está en uso"));
+                throw new DuplicateUserException("email", request.getEmail());
             }
         }
 
@@ -251,59 +225,35 @@ public class UserController {
         }
 
         if (request.getRoleIds() != null) {
-            Set<Role> newRoles = request.getRoleIds().stream()
-                    .map(rid -> roleRepository.findById(rid.longValue()).orElse(null))
-                    .filter(r -> r != null)
-                    .collect(Collectors.toSet());
-            user.setRoles(newRoles);
+            user.setRoles(resolveRoles(request.getRoleIds()));
         }
 
-        try {
-            User updated = userService.save(user);
-            return ResponseEntity.ok(convertToDto(updated));
-        } catch (Exception e) {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body(Map.of("error", "Error al actualizar: " + e.getMessage()));
-        }
+        User updated = userService.save(user);
+        return ResponseEntity.ok(convertToDto(updated));
     }
 
     @DeleteMapping("/{id}")
-    public ResponseEntity<?> deleteUser(@PathVariable Long id) {
-        Long loggedInUserId = getCurrentUserId();
-        if (id.equals(loggedInUserId)) {
+    public ResponseEntity<Map<String, String>> deleteUser(@PathVariable Long id) {
+        UserPrincipal currentUser = getCurrentUser();
+
+        if (id.equals(currentUser.getId())) {
             return ResponseEntity.status(HttpStatus.FORBIDDEN)
                     .body(Map.of("error", "No puedes desactivar tu propia cuenta"));
         }
 
-        if (id.equals(1L)) {
+        User target = userService.findByIdOrThrow(id);
+        if (isSuperAdmin(target)) {
             return ResponseEntity.status(HttpStatus.FORBIDDEN)
-                    .body(Map.of("error", "No se puede eliminar al Super Administrador"));
+                    .body(Map.of("error", "No se puede eliminar a un Super Administrador"));
         }
 
-        Optional<User> userOpt = userService.findById(id);
-        if (userOpt.isEmpty()) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                    .body(Map.of("error", "Usuario no encontrado"));
-        }
-
-        try {
-            userService.softDelete(id);
-            return ResponseEntity.ok(Map.of("message", "Usuario eliminado correctamente"));
-        } catch (Exception e) {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body(Map.of("error", "Error al desactivar usuario: " + e.getMessage()));
-        }
+        userService.softDelete(id);
+        return ResponseEntity.ok(Map.of("message", "Usuario desactivado correctamente"));
     }
 
     @PatchMapping("/{id}/activate")
-    public ResponseEntity<?> activateUser(@PathVariable Long id) {
-        Optional<User> userOpt = userService.findById(id);
-        if (userOpt.isEmpty()) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                    .body(Map.of("error", "Usuario no encontrado"));
-        }
-
-        User user = userOpt.get();
+    public ResponseEntity<UserResponse> activateUser(@PathVariable Long id) {
+        User user = userService.findByIdOrThrow(id);
         user.setActive(true);
         user.setLockedUntil(null);
         user.setLoginAttempts(0);
@@ -314,27 +264,21 @@ public class UserController {
 
     @PatchMapping("/{id}/deactivate")
     public ResponseEntity<?> deactivateUser(@PathVariable Long id) {
-        Long loggedInUserId = getCurrentUserId();
-        if (id.equals(loggedInUserId)) {
+        UserPrincipal currentUser = getCurrentUser();
+
+        if (id.equals(currentUser.getId())) {
             return ResponseEntity.status(HttpStatus.FORBIDDEN)
                     .body(Map.of("error", "No puedes desactivar tu propia cuenta"));
         }
 
-        if (id.equals(1L)) {
+        User target = userService.findByIdOrThrow(id);
+        if (isSuperAdmin(target)) {
             return ResponseEntity.status(HttpStatus.FORBIDDEN)
-                    .body(Map.of("error", "No se puede desactivar al Super Administrador"));
+                    .body(Map.of("error", "No se puede desactivar a un Super Administrador"));
         }
 
-        Optional<User> userOpt = userService.findById(id);
-        if (userOpt.isEmpty()) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                    .body(Map.of("error", "Usuario no encontrado"));
-        }
-
-        User user = userOpt.get();
-        user.setActive(false);
-
-        User updated = userService.save(user);
+        target.setActive(false);
+        User updated = userService.save(target);
         return ResponseEntity.ok(convertToDto(updated));
     }
 }
